UI fixed for Windows

--- a/DataTableUI/src/org/mongkie/ui/datatable/graph/actions/SearchAndReplaceUI.form
+++ b/DataTableUI/src/org/mongkie/ui/datatable/graph/actions/SearchAndReplaceUI.form
@@ -140,6 +140,9 @@
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
           <ResourceString bundle="org/mongkie/ui/datatable/graph/actions/Bundle.properties" key="SearchAndReplaceUI.findPreviousButton.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
+        <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
+          <Insets value="[2, 4, 2, 4]"/>
+        </Property>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="findPreviousButtonActionPerformed"/>
@@ -231,6 +234,9 @@
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
           <ResourceString bundle="org/mongkie/ui/datatable/graph/actions/Bundle.properties" key="SearchAndReplaceUI.findNextButton.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+        </Property>
+        <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
+          <Insets value="[2, 4, 2, 4]"/>
         </Property>
       </Properties>
       <Events>
