--- a/EnrichmentAnalysisUI/src/org/mongkie/ui/enrichment/EnrichmentChooserTopComponent.form
+++ b/EnrichmentAnalysisUI/src/org/mongkie/ui/enrichment/EnrichmentChooserTopComponent.form
@@ -34,7 +34,7 @@
           <Component id="settingsSeparator" alignment="0" pref="283" max="32767" attributes="0"/>
           <Component id="selectionSeparator" alignment="0" pref="283" max="32767" attributes="0"/>
           <Group type="102" alignment="1" attributes="0">
-              <Component id="enrichmentComboBox" pref="257" max="32767" attributes="0"/>
+              <Component id="enrichmentComboBox" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="infoLabel" min="-2" max="-2" attributes="0"/>
           </Group>
@@ -66,7 +66,7 @@
           <Group type="102" alignment="0" attributes="0">
               <Group type="103" groupAlignment="2" attributes="0">
                   <Component id="infoLabel" alignment="2" min="-2" max="-2" attributes="0"/>
-                  <Component id="enrichmentComboBox" alignment="2" min="-2" pref="32" max="-2" attributes="0"/>
+                  <Component id="enrichmentComboBox" alignment="2" min="-2" pref="24" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
               <Component id="selectionSeparator" linkSize="2" min="-2" max="-2" attributes="0"/>
@@ -113,13 +113,13 @@
     </Component>
     <Component class="org.jdesktop.swingx.JXTitledSeparator" name="selectionSeparator">
       <Properties>
+        <Property name="enabled" type="boolean" value="false"/>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/org/mongkie/ui/enrichment/resources/light-bulb.png"/>
         </Property>
         <Property name="title" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
           <ResourceString bundle="org/mongkie/ui/enrichment/Bundle.properties" key="EnrichmentChooserTopComponent.selectionSeparator.title" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
-        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JRadioButton" name="wholeNetworkButton">
