--- a/ImportUI/src/org/mongkie/ui/importer/attributes/ImportAttributesPanel.form
+++ b/ImportUI/src/org/mongkie/ui/importer/attributes/ImportAttributesPanel.form
@@ -39,7 +39,7 @@
                       <EmptySpace min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Component id="keyAttributesScrollPane" min="0" pref="0" max="32767" attributes="2"/>
-                          <Component id="keyAttributeListLabel" alignment="1" pref="183" max="32767" attributes="1"/>
+                          <Component id="keyAttributeListLabel" alignment="1" pref="188" max="32767" attributes="1"/>
                       </Group>
                   </Group>
                   <Component id="previewSeparator" alignment="0" max="32767" attributes="3"/>
@@ -95,10 +95,9 @@
                   <Component id="forEdgeRadioButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="chooseFileLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="filePathTextField" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="openFileButton" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="2" attributes="0">
+                  <Component id="openFileButton" linkSize="1" alignment="2" min="-2" max="-2" attributes="0"/>
+                  <Component id="filePathTextField" linkSize="1" alignment="2" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="hasHeaderCheckBox" min="-2" pref="16" max="-2" attributes="0"/>
@@ -132,7 +131,7 @@
                                   <Component id="editColumnExplainLabel" alignment="3" min="-2" pref="13" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="keyAttributesScrollPane" pref="162" max="32767" attributes="0"/>
+                              <Component id="keyAttributesScrollPane" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
                               <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
@@ -142,6 +141,11 @@
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
+          </Group>
+          <Group type="102" attributes="0">
+              <EmptySpace min="112" pref="112" max="-2" attributes="0"/>
+              <Component id="chooseFileLabel" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="353" pref="353" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -243,11 +247,6 @@
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
         <Component class="javax.swing.JTable" name="previewTable">
-          <Properties>
-            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-              <Border info="null"/>
-            </Property>
-          </Properties>
         </Component>
       </SubComponents>
     </Container>
@@ -256,11 +255,11 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="11" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/mongkie/ui/importer/attributes/Bundle.properties" key="ImportAttributesPanel.editColumnExplainLabel.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
-        </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="c8" green="46" red="f2" type="rgb"/>
+        </Property>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+          <ResourceString bundle="org/mongkie/ui/importer/attributes/Bundle.properties" key="ImportAttributesPanel.editColumnExplainLabel.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
       </Properties>
     </Component>
@@ -269,14 +268,14 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="11" style="0"/>
         </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="0" id="blue" palette="1" red="0" type="palette"/>
+        </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/org/mongkie/ui/importer/resources/key_mini.png"/>
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
           <ResourceString bundle="org/mongkie/ui/importer/attributes/Bundle.properties" key="ImportAttributesPanel.keyAttributeListLabel.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
-        </Property>
-        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="0" id="blue" palette="1" red="0" type="palette"/>
         </Property>
       </Properties>
     </Component>
@@ -327,8 +326,14 @@
     </Component>
     <Component class="javax.swing.JButton" name="openFileButton">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="SansSerif" size="11" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
           <ResourceString bundle="org/mongkie/ui/importer/attributes/Bundle.properties" key="ImportAttributesPanel.openFileButton.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+        </Property>
+        <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
+          <Insets value="[2, 4, 2, 4]"/>
         </Property>
       </Properties>
       <Events>
