--- a/VisualMappingPlugins/src/org/mongkie/ui/vm/ranking/transformer/SizeTransformerPanel.form
+++ b/VisualMappingPlugins/src/org/mongkie/ui/vm/ranking/transformer/SizeTransformerPanel.form
@@ -23,7 +23,7 @@
                       <Component id="labelMinSize" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
                       <Component id="minSize" linkSize="5" min="-2" pref="43" max="-2" attributes="1"/>
-                      <EmptySpace type="separate" max="32767" attributes="0"/>
+                      <EmptySpace type="separate" pref="76" max="32767" attributes="0"/>
                       <Component id="labelMaxSize" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="maxSize" linkSize="5" min="-2" max="-2" attributes="1"/>
@@ -32,7 +32,7 @@
                       <Component id="labelRange" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="rangeSlider" alignment="0" max="32767" attributes="0"/>
+                          <Component id="rangeSlider" alignment="0" pref="0" max="32767" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="lowerBoundLabel" min="-2" max="-2" attributes="1"/>
                               <EmptySpace max="32767" attributes="0"/>
