--- a/VisualizationUI/src/org/mongkie/ui/visualization/options/GlobalSettingPanel.form
+++ b/VisualizationUI/src/org/mongkie/ui/visualization/options/GlobalSettingPanel.form
@@ -26,7 +26,7 @@
                   </Group>
                   <Component id="resetAllButton" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="147" max="32767" attributes="0"/>
+              <EmptySpace pref="167" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -70,6 +70,9 @@
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
           <ResourceString bundle="org/mongkie/ui/visualization/options/Bundle.properties" key="GlobalSettingPanel.resetAllButton.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+        </Property>
+        <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
+          <Insets value="[2, 4, 2, 4]"/>
         </Property>
       </Properties>
       <Events>
