--- a/ImportUI/src/org/mongkie/ui/importer/attributes/ImportAttributesPanel.form
+++ b/ImportUI/src/org/mongkie/ui/importer/attributes/ImportAttributesPanel.form
@@ -39,7 +39,7 @@
                       <EmptySpace min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Component id="keyAttributesScrollPane" min="0" pref="0" max="32767" attributes="2"/>
-                          <Component id="keyAttributeListLabel" alignment="1" pref="188" max="32767" attributes="1"/>
+                          <Component id="keyAttributeListLabel" alignment="1" pref="183" max="32767" attributes="1"/>
                       </Group>
                   </Group>
                   <Component id="previewSeparator" alignment="0" max="32767" attributes="3"/>
@@ -86,7 +86,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
+          <Group type="102" attributes="0">
               <Component id="importAttributesHeader" min="-2" pref="81" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -98,6 +98,7 @@
               <Group type="103" groupAlignment="2" attributes="0">
                   <Component id="openFileButton" linkSize="1" alignment="2" min="-2" max="-2" attributes="0"/>
                   <Component id="filePathTextField" linkSize="1" alignment="2" min="-2" max="-2" attributes="0"/>
+                  <Component id="chooseFileLabel" alignment="2" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="hasHeaderCheckBox" min="-2" pref="16" max="-2" attributes="0"/>
@@ -131,7 +132,7 @@
                                   <Component id="editColumnExplainLabel" alignment="3" min="-2" pref="13" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="keyAttributesScrollPane" max="32767" attributes="0"/>
+                              <Component id="keyAttributesScrollPane" pref="163" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
                               <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
@@ -141,11 +142,6 @@
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
-          </Group>
-          <Group type="102" attributes="0">
-              <EmptySpace min="112" pref="112" max="-2" attributes="0"/>
-              <Component id="chooseFileLabel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="353" pref="353" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -327,13 +323,10 @@
     <Component class="javax.swing.JButton" name="openFileButton">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="SansSerif" size="11" style="0"/>
+          <Font name="Tahoma" size="11" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
           <ResourceString bundle="org/mongkie/ui/importer/attributes/Bundle.properties" key="ImportAttributesPanel.openFileButton.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
-        </Property>
-        <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
-          <Insets value="[2, 4, 2, 4]"/>
         </Property>
       </Properties>
       <Events>
