UI fixes for gtk #2

--- a/EnrichmentAnalysisUI/src/org/mongkie/ui/enrichment/EnrichmentChooserTopComponent.form
+++ b/EnrichmentAnalysisUI/src/org/mongkie/ui/enrichment/EnrichmentChooserTopComponent.form
@@ -11,7 +11,7 @@
   <Properties>
     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
       <Border info="org.netbeans.modules.form.compat2.border.EmptyBorderInfo">
-        <EmptyBorder bottom="2" left="3" right="4" top="4"/>
+        <EmptyBorder bottom="2" left="3" right="4" top="6"/>
       </Border>
     </Property>
   </Properties>
@@ -30,13 +30,14 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="settingsPanel" alignment="1" pref="283" max="32767" attributes="0"/>
-          <Component id="settingsSeparator" alignment="0" pref="283" max="32767" attributes="0"/>
-          <Component id="selectionSeparator" alignment="0" pref="283" max="32767" attributes="0"/>
+          <Component id="settingsPanel" alignment="1" max="32767" attributes="0"/>
+          <Component id="settingsSeparator" alignment="0" max="32767" attributes="0"/>
+          <Component id="selectionSeparator" alignment="0" max="32767" attributes="0"/>
           <Group type="102" alignment="1" attributes="0">
               <Component id="enrichmentComboBox" max="32767" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
               <Component id="infoLabel" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
           </Group>
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
@@ -55,7 +56,7 @@
                               <Component id="fromSelectionButton" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace pref="18" max="32767" attributes="0"/>
+                      <EmptySpace pref="20" max="32767" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -66,9 +67,9 @@
           <Group type="102" alignment="0" attributes="0">
               <Group type="103" groupAlignment="2" attributes="0">
                   <Component id="infoLabel" alignment="2" min="-2" max="-2" attributes="0"/>
-                  <Component id="enrichmentComboBox" alignment="2" min="-2" pref="25" max="-2" attributes="0"/>
+                  <Component id="enrichmentComboBox" alignment="2" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="selectionSeparator" linkSize="2" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -80,10 +81,10 @@
                   <Component id="geneIdColumnLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="geneIdColumnComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="settingsSeparator" linkSize="2" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="settingsPanel" pref="121" max="32767" attributes="0"/>
+              <Component id="settingsPanel" pref="107" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="runButton" min="-2" max="-2" attributes="0"/>
           </Group>
